# abi3audit

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  pip-audit.yml  release.yml  tests.yml  zizmor.yml
abi3audit/: __init__.py  __main__.py  _audit.py  _cache.py  _cli.py  _extract.py  _object.py  _state.py
abi3audit/_extract/: __init__.py
abi3audit/_vendor/: asn1_der.py  mach_o.py
crates/abi3audit/: Cargo.toml
crates/abi3audit-cli/: Cargo.toml
crates/abi3audit/src/: lib.rs
crates/abi3audit/src/object/: extract.rs  mod.rs  types.rs
crates/abi3info/: Cargo.toml  build.rs
crates/abi3info/src/: lib.rs
test/: test_audit.py  test_audit_unit.py  test_extract.py  test_minimum_version.py
