[workspace]
resolver = "3"
members = ["crates/abi3audit", "crates/abi3audit-cli", "crates/abi3info"]

[workspace.package]
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
homepage = "https://github.com/pypa/abi3audit"
edition = "2024"
license = "MIT"

[workspace.dependencies]
phf = { version = "0.13.1", default-features = false }
phf_codegen = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "1.1", features = ["serde"] }
