[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "abi3audit"
dynamic = ["version"]
description = "Scans Python wheels for abi3 violations and inconsistencies"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "William Woodruff", email = "william@trailofbits.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
]
dependencies = [
  "abi3info >= 2024.06.19",
  "kaitaistruct ~= 0.10",
  "packaging >= 21.3,< 25.0",
  "pefile >= 2022.5.30",
  "pyelftools >= 0.29",
  "requests >= 2.28.1,< 2.33.0",
  "requests-cache >= 0.9.6,< 1.3.0",
  "rich >= 12.5.1,< 13.10.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://pypi.org/project/abi3audit/"
Issues = "https://github.com/pypa/abi3audit/issues"
Source = "https://github.com/pypa/abi3audit"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pretend", "coverage[toml]"]
lint = ["bandit", "interrogate", "mypy", "ruff", "types-requests"]
dev = ["build", "pdoc3", "abi3audit[test,lint]"]

[project.scripts]
abi3audit = "abi3audit._cli:main"

[tool.interrogate]
exclude = ["env", "test", "codegen"]
ignore-semiprivate = true
fail-under = 100

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = ["_vendor/"]
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["./test"]

[tool.coverage.run]
omit = ["abi3audit/_vendor/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
