[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

# # NOTE: This section is a stub; needed to prevent
# # `uv run --only-group docs` from failing.
# [project]
# name = "abi3audit"
# dynamic = ["version", "description", "readme", "urls", "authors", "license"]
# # Arbitrarily set to the oldest non-EOL Python.
# requires-python = ">=3.10"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/abi3audit/Cargo.toml"
include = [
    { path = "README.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]
