[package]
name = "abi3audit-core"
description = "Audits Python extensions for abi3 violations and inconsistencies"
version = "0.1.0"

homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
abi3info.workspace = true

thiserror.workspace = true
goblin.workspace = true
